# Email-Thread-RAG-Chatbot

./: .env.example  .gitignore  DATASET.md  Dockerfile  README.md  config.py  docker-compose.yml  fix_diagram.py  pyproject.toml  requirements.txt
.serena/: project.yml
app/: schemas.py  streaming.py
data/indexes/: bm25.pkl  index_stats.json  vector.pkl
data/processed/: attachments.json  chunks.jsonl  emails.json  resolved_dataset_manifest.json
data/raw/: dataset_manifest.json
data/raw/thread-local/: fixture_attachment.txt
docs/: ARCHITECTURE.md  Architecture_Gmail_RAG.md  GMAIL_NATIVE_RAG_ARCHITECTURE.md  Plan_Upgrad.md
email_thread_rag/: __init__.py  config.py
email_thread_rag/app/: main.py  schemas.py
email_thread_rag/context/: __init__.py  backfill.py  enqueue.py  fakes.py  fingerprint.py  models.py  prompt.py  provider.py  repository.py  store.py  worker.py
email_thread_rag/gmail/: __init__.py  cipher.py  client.py  fakes.py  message.py  models.py  oauth.py  repository.py  routes.py  service.py  sink.py  store.py  sync.py  webhook.py  worker.py
email_thread_rag/graph/: __init__.py  backfill.py  enqueue.py  extract.py  fakes.py  fingerprint.py  models.py  prompt.py  provider.py  repository.py  retrieval.py  store.py  worker.py
email_thread_rag/rag/: answer.py  answer_provider.py  backend.py  bm25_index.py  chunking.py  citation_validator.py  corpus.py  email_segmentation.py  engine.py  enron_archive.py  fusion.py  grounded_answer.py  parse_attachments.py  parse_eml.py  planner.py  retrieval.py  rewrite.py  utils.py  vector_index.py
email_thread_rag/rag/attachments/: __init__.py  models.py  ocr.py  pdf.py  repository.py  store.py  worker.py
email_thread_rag/rag/paradedb/: __init__.py  ingest.py  repository.py  retrieval.py
email_thread_rag/scripts/: apply_paradedb_migrations.py  build_dataset_slice.py  ingest_corpus.py  run_demo.py
email_thread_rag/ui/: app.py
frontend/: .env.example  README.md  package-lock.json  vite.config.ts
frontend/src/: routeTree.gen.ts  styles.css
frontend/src/lib/: account.ts  api.ts  format.ts  queries.ts
infra/: Dockerfile  docker-compose.yml
rag/: chunking.py  mailbox_slice.py  memory.py  retrieval.py  rewrite.py  vector_index.py
runs/20260315T141211Z/: trace.jsonl
runs/20260315T144419Z/: trace.jsonl
runs/20260315T160825Z/: trace.jsonl
runs/20260315T161947Z/: trace.jsonl
runs/20260315T163155Z/: trace.jsonl
runs/20260315T164008Z/: trace.jsonl
runs/20260315T164849Z/: trace.jsonl
src/: NONCANONICAL.md  config.py
src/app/: main.py  schemas.py
src/ingest/: chunker.py
src/memory/: thread_summary.py
src/models/: sessions.py
src/rag/: answer_gen.py  engine.py
src/retrieval/: bm25.py  reranker.py  rrf.py
src/scripts/: ingest_corpus.py
tests/: conftest.py  context_store_contract.py  gmail_store_contract.py  graph_store_contract.py  test_answer_independence.py  test_attachment_citations.py  test_attachment_independence.py  test_attachment_store.py  test_attachment_worker.py  test_citation_validator.py  test_comparisons.py  test_context_independence.py  test_context_jobs.py  test_context_prompt.py  test_context_provider.py  test_context_window.py  test_context_worker.py  test_corrections.py  test_email_chunking.py  test_email_metadata_answers.py  test_encode_query_prefix.py  test_end_to_end_ingest.py  test_gmail_attachment_sync.py  test_gmail_independence.py  test_gmail_message.py  test_gmail_oauth.py  test_gmail_pubsub_to_threads.py  test_gmail_routes.py  test_gmail_store.py  test_gmail_sync.py  test_gmail_webhook.py  test_graph_extract.py  test_graph_independence.py  test_graph_jobs.py  test_graph_planner.py  test_graph_prompt.py  test_graph_provider.py  test_graph_retrieval.py  test_graph_worker.py  test_grounded_answer.py  (+12 more)
tests/fixtures/: sample.eml
tests/integration/: conftest.py  test_attachments_paradedb.py  test_context_paradedb.py  test_engine_paradedb.py  test_gmail_paradedb.py  test_graph_paradedb.py  test_graph_retrieval_paradedb.py  test_grounded_answer_paradedb.py  test_paradedb_integration.py
(+21 files in other folders)
