[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "email-thread-rag"
version = "0.1.0"
description = "Inbox-Copilot Level-2 email thread RAG baseline (Stage 0, in-memory backend)."
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "lxml>=5.2.2",
    "numpy>=1.26.4",
    "pillow>=10.3.0",
    "pydantic>=2.7.1",
    "pydantic-settings>=2.2.1",
    "pymupdf>=1.24.5",
    "pytesseract>=0.3.10",
    "python-dateutil>=2.9.0",
    "python-docx>=1.1.2",
    "python-dotenv>=1.0.1",
    "rank-bm25>=0.2.2",
    "striprtf>=0.0.26",
    "xlrd>=2.0.1",
]

# Heavy / future-optional extras. Not needed for Stage-0 tests or the in-memory
# demo; the model-backed encoder, reranker and rewriter lazy-import these.
[project.optional-dependencies]
models = [
    "faiss-cpu>=1.8.0",
    "huggingface-hub>=0.23.4",
    "sentence-transformers>=2.7.0",
    "torch>=2.3.0",
]
serve = [
    "uvicorn>=0.30.1",
]
# Stage-2 ParadeDB/Postgres backend. Only imported when RAG_BACKEND=paradedb;
# memory-only installs/imports/tests never touch this.
postgres = [
    "psycopg[binary]>=3.1.18",
]
# Stage-3 Gmail sync. Only imported when a mailbox is connected/synced;
# RAG_BACKEND=memory never touches any of this. The Gmail REST calls go over
# httpx (already a core dependency) -- google-auth is here solely to verify the
# OIDC token on Pub/Sub pushes, and cryptography solely to encrypt refresh
# tokens at rest.
gmail = [
    "cryptography>=42.0.0",
    "google-auth>=2.29.0",
    "psycopg[binary]>=3.1.18",
    "requests>=2.31.0",
]
# Stage-8 local OCR fallback for scanned/image-only PDF pages. Only used when
# ATTACHMENT_OCR_ENABLED=true; the Tesseract backend lazy-imports these, and when
# they are absent a scanned page is recorded as unavailable (never invented).
# Tesseract is a local binary -- no cloud OCR, no API key, no model download.
ocr = [
    "pillow>=10.3.0",
    "pytesseract>=0.3.10",
]
dev = [
    "pytest>=8.2.1",
]

[tool.setuptools.packages.find]
include = ["email_thread_rag*"]
exclude = ["src*", "tests*", "data*", "runs*", "infra*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires a running ParadeDB/Postgres instance (see infra/docker-compose.yml's `db` service)",
]
